# techincal2

./: Dockerfile  README.md  create_amplicons.py  docker-compose.yml  guides.tsv  output.csv  pyproject.toml
